# kkrbot

./: .env.dev  .gitignore  Dockerfile  README.md  bot.py  globals.py  pyproject.toml  requirements.txt  run.sh  stop.sh
crawlers/: BestdoriCrawler.py  BilibiliDrawcardCrawler.py  Logger.py
crawlers/bestdori/: __init__.py
kkrbot/: .env.dev  .env.prod  README.md  bot.py  pyproject.toml
kkrbot/crawlers/: BestdoriCrawler.py  BilibiliDrawcardCrawler.py  PixivCrawler.py
kkrbot/kkrbot/plugins/: drawcard_query.py
kkrbot/plugins/: bangdream.py  drawcard_query.py  iam_kkr.py  majsoul.py
scripts/: flow_controller.py  patch_bestdori_assets.py
src/: cqhttp.py  crawler.py  crawler_main.py  requirements
src/crawler/: __init__.py  bilibili_drawcard_spider.py  connection.py
src/crawlers/: BilibiliDrawcardCrawler.py
src/crawlers/bestdori/: __init__.py  connection.py
src/handlers/: CommonHandler.py  EasyGroupHandler.py  LoseliaGroupHandler.py
src/lib/: BaseBot.py  BestdoriAssets.py  Cards.py  CommonBot.py  Handler.py  ImageProcesser.py  MsgTypes.py  OperationManager.py  States.py  Subscribes.py  Timer.py  __init__.py  bilibili_drawcard_spider.py  func.py  pixiv_crawler.py
src/lib/chart/: Resource.py
src/lib/const/: Emojis.py  Groups.py  Images.py  __init__.py
src/utils/: __init__.py  crawler_main.py
test/: aria2rpc.test.py  bestdori_crawler.test.py
utils/: Asset.py  BestdoriAssets.py  ImageProcesser.py  __init__.py  color.py  logger.py  pydantic_model_helpers.py
