[tool.poetry]
name = "kkrbot"
version = "0.1.0"
description = "kkrbot"
authors = ["LLRukia", "akaneoimo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0.a1"
nb-cli = "^0.5.0"
nonebot-plugin-test = "^0.3.0"
nonebot-adapter-cqhttp = "^2.0.0.a1"
nonebot-plugin-apscheduler = "0.1.2"
pillow = "8.3.2"
websockets = "10.0.0"
pydantic = "1.8.2"
aiohttp = "3.8.0"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"

[nonebot.plugins]
plugins = ["apscheduler"]
plugin_dirs = ["kkrbot/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

